--- a/templates/users/user.edit.html.twig
+++ b/templates/users/user.edit.html.twig
@@ -4,6 +4,7 @@
     <div class="user">
         {{ form_start(form) }}
         {{ form_widget(form) }}
+        <button class="btn btn-success" type="submit">Terminé</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
