--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -509,7 +509,8 @@ ul.social-network {
     border-radius: 4px;
 }
 
-.faq__title{
+.faq__title, .gcu__title{
+    margin: 10px 0;
     text-align: center;
     color: #355e7e;
     width: 100%;
@@ -564,4 +565,32 @@ ul.social-network {
     font-family: "Font Awesome 5 Free", serif;
     font-weight: 600;
     content: "\f068";
+}
+
+.gcu__page{
+    margin: 150px 0;
+    background: white;
+    padding: 20px;
+    border-radius: 4px;
+}
+
+.gcu__content {
+    margin: 10px 15px 15px;
+    color: #355e7e;
+    padding: 0 18px;
+    width: 100%;
+    text-align: justify;
+}
+.gcu__subtitle{
+    text-align: center;
+    font-style: italic;
+}
+
+.gcu__italic {
+    font-style: italic;
+    display: inline;
+}
+
+.gcu__content p a{
+    text-decoration: none;
 }
