--- a/templates/front.base.html.twig
+++ b/templates/front.base.html.twig
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col-sm-3">
                     <p class="footer__title">Légale</p>
-                    <p><a href="#"> Conditions générales d'utilisation </a></p>
+                    <p><a href="{{ path('gcu') }}"> Conditions générales d'utilisation </a></p>
                     <p><a href="#"> Mentions Légales </a></p>
                     <p>©2019 ARS</p>
                 </div>
