--- a/templates/front.base.html.twig
+++ b/templates/front.base.html.twig
@@ -70,7 +70,7 @@
                 <div class="col-sm-3">
                     <p class="footer__title">Légale</p>
                     <p><a href="{{ path('gcu') }}"> Conditions générales d'utilisation </a></p>
-                    <p><a href="#"> Mentions Légales </a></p>
+                    <p><a href="{{ path('legalNotice') }}"> Mentions Légales </a></p>
                     <p>©2019 ARS</p>
                 </div>
                 <div class="col-sm-3">
