finish all pages present in footer

--- a/templates/pages/gcu.html.twig
+++ b/templates/pages/gcu.html.twig
@@ -34,7 +34,9 @@
                             href="https://www.linkedin.com/in/diane-mansuy-96a7b5138?originalSubdomain=fr">Diane
                         Mansuy</a>
                 </p>
-                <p>Adresse e-mail : anime.reviewers.society@gmail.com. </p>
+                <p>Adresse e-mail : <a
+                            href="mailto:anime.reviewers.society@gmail.com?subject=Contact conditions générales d'utilisation">anime.reviewers.society@gmail.com</a>
+                </p>
 
                 <p>Les hébergeurs du site Anime Reviewers Society sont <a href="https://github.com/florian-lg">Florian
                         Le Gars </a> et <a
