--- a/templates/front.base.html.twig
+++ b/templates/front.base.html.twig
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-sm-3">
                     <p class="footer__title">ARS</p>
-                    <p><a href="#"> Qui sommes-nous ?</a></p>
+                    <p><a href="{{ path('ars') }}"> Qui sommes-nous ?</a></p>
                 </div>
                 <div class="col-sm-3">
                     <p class="footer__title">Légale</p>
