--- a/templates/pages/legalNotice.html.twig
+++ b/templates/pages/legalNotice.html.twig
@@ -9,8 +9,8 @@
             <div class="ln__content">
                 <p>Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la
                     Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des utilisateurs
-                    et visiteurs du site :<a href="http://anime-reviewers-society.com" target="_blank">
-                        anime-reviewers-society.com</a>les informations suivantes :</p>
+                    et visiteurs du site <a href="http://anime-reviewers-society.com" target="_blank">
+                        anime-reviewers-society.com</a> les informations suivantes :</p>
 
                 <h5>1. Informations légales </h5>
 
