create contact form

--- a/templates/front.base.html.twig
+++ b/templates/front.base.html.twig
@@ -61,7 +61,7 @@
                 <div class="col-sm-3">
                     <p class="footer__title">Vous avez des questions ?</p>
                     <p>Vous trouverez une <a href="{{ path('faq') }}">FAQ</a> complète des questions récurrentes.
-                        Vous pouvez également utiliser notre <a href="#">formulaire de contact</a>.</p>
+                        Vous pouvez également utiliser notre <a href="{{ path('contact') }}">formulaire de contact</a>.</p>
                 </div>
                 <div class="col-sm-3">
                     <p class="footer__title">ARS</p>
