--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
-    background: url("https://cdn.allwallpaper.in/wallpapers/1920x1080/7406/dragons-flying-in-the-sky-1920x1080-wallpaper.jpg") no-repeat fixed center;
+    background: url("https://zupimages.net/up/19/15/6zmv.png") no-repeat fixed center;
 }
 
 /** Override Bootstrap **/
@@ -754,6 +754,120 @@ ul.social-network {
 
 .badge img {
     border-radius: 25px;
+}
+
+.contact__content {
+    margin: 100px 20px 0;
+    color: #355e7e;
+    padding: 0 18px;
+    width: 100%;
+    text-align: center;
+}
+
+.contact__content form h1 {
+    font-size: 18px;
+    background: #acb4f4 none repeat scroll 0 0;
+    color: rgb(255, 255, 255);
+    padding: 22px 25px;
+    border-radius: 5px 5px 0 0;
+    margin: auto;
+    text-shadow: none;
+    text-align: center;
+}
+
+.contact__content form {
+    border-radius: 5px;
+    max-width: 700px;
+    width: 100%;
+    margin: 5% auto;
+    background-color: #f9f9f9;
+    overflow: hidden;
+}
+
+.contact__content p span {
+    color: #F00;
+}
+
+.contact__content p {
+    margin: 0;
+    line-height: 2;
+    color: #333;
+    font-weight: 100;
+    font-size: large;
+}
+
+.contact__content h1 {
+    text-align: center;
+    color: #666;
+    text-shadow: 1px 1px 0 #FFF;
+    margin: 50px 0 0 0
+}
+
+.contact__content input {
+    border-radius: 0 5px 5px 0;
+    border: 1px solid #eee;
+    margin-bottom: 10px;
+    width: 100%;
+    height: 40px;
+    float: left;
+    text-align: center;
+    font-weight: 100;
+    padding: 1em 3em;
+}
+
+.contact__content a {
+    text-decoration: inherit
+}
+
+.contact__content textarea {
+    border-radius: 0 5px 5px 0;
+    border: 1px solid #EEE;
+    margin: 0;
+    width: 100%;
+    height: 130px;
+    float: left;
+    text-align: center;
+    font-weight: 100;
+    padding: 1em 3em;
+
+}
+
+.contact__content .form-group {
+    overflow: hidden;
+    clear: both;
+    margin: 5px 0;
+}
+
+.contact__content i {
+    color: #555;
+}
+
+.contentform {
+    padding: 20px 30px;
+}
+
+.bouton-contact {
+    background-color: #6fd1f3;
+    color: #FFF;
+    text-align: center;
+    width: 100%;
+    border: 0;
+    padding: 17px 25px;
+    border-radius: 0 0 5px 5px;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.validation {
+    display: none;
+    margin: 0 0 10px;
+    font-weight: 400;
+    font-size: 13px;
+    color: #DE5959;
+}
+
+legend.col-form-label.required{
+    visibility: hidden;
 }
 
 
