--- a/templates/animes/anime.show.html.twig
+++ b/templates/animes/anime.show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'front.base.html.twig' %}
-
+{% block title %}ARS | {{ anime.originalTitle }}{% endblock %}
 {% block content %}
     <div class="anime">
         <div class="anime__title">
