--- a/templates/front.base.html.twig
+++ b/templates/front.base.html.twig
@@ -28,7 +28,7 @@
                                     </li>
                                 {% endif %}
                                 <li class="sidebar__item">
-                                    <a href="{{ path("user.show") }}" class="sidebar__link">
+                                    <a href="{{ path("user.profil") }}" class="sidebar__link">
                                         <span class="sidebar__item__space"><i class="fas fa-user"></i></span> Mon compte
                                     </a></li>
                                 <li class="sidebar__item"><a href="#" class="sidebar__link">Link 2</a></li>
@@ -55,6 +55,9 @@
         </div>
         <div class="overlay"></div>
     </main>
+    <div id='scroll_to_top' class='opacity'>
+        <i class="fas fa-chevron-up"></i>
+    </div>
     <footer>
         <div class="container">
             <div class="row">
