--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'front.base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}ARS | Inscription{% endblock %}
 
 {% block content %}
     <div class="form_register">
