--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'front.base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}ARS | Connexion{% endblock %}
 
 {% block content %}
     <div class="form_login">
